<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="pref_radius"
        android:title="@string/pref_radius"
        android:defaultValue="10000"
        android:inputType="number"
        />

    <CheckBoxPreference
        android:key="pref_closed"
        android:title="@string/pref_closed"
        android:defaultValue="true"
        android:summary="@string/pref_closed_summary" />

    <PreferenceCategory android:title="@string/pref_cat_sib">
        <EditTextPreference
            android:key="pref_sib_address"
            android:title="@string/pref_sib_address"
            android:defaultValue="etourism.cs.karelia.ru" />

        <EditTextPreference
            android:key="pref_sib_port"
            android:title="@string/pref_sib_port"
            android:defaultValue="20203"
            android:inputType="number"
            />
    </PreferenceCategory>
</PreferenceScreen>